manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fs-deployment
  labels:
    app: fs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fs
  template:
    metadata:
      labels:
        app: fs
    spec:
      containers:
      - name: fs-container
        image: lackhoa/fractal-sky:v0.2a
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: entrypoint
spec:
  selector:
    app: fs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "True"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "True"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: fractalsky.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: entrypoint
          servicePort: 80
  tls:
  - hosts:
    - fractalsky.xyz
    secretName: fs-tls
